# research-assistant

./: README.md  REFACTORING_REVIEW.md  config.py  init_llm.py  main.py  pyproject.toml
graphs/: __init__.py
graphs/analyst/: __init__.py  analyst_graph.py  analyst_nodes.py
graphs/interview/: __init__.py  interview_graph.py  interview_nodes.py
prompts/: __init__.py  analyst_creation_prompt.py  expert_answer_prompt.py  interview_prompt.py  intro_conclusion_prompts.py  section_report_prompt.py  web_query_prompt.py  write_report_prompt.py
states/: __init__.py  analyst_state.py  interview_state.py  models.py  research_state.py
utils/: __init__.py  file_utils.py
